- [x]  Update all colours to be dynamic - [x]  Fix styling - [x]  remove button border - [x]  try fixing divider/border spacing

--- a/src/components/warehouseList/warehouseList.scss
+++ b/src/components/warehouseList/warehouseList.scss
@@ -8,39 +8,41 @@
     flex-direction: column;
     background-color: variables.$light-color;
     border-radius: 5px;
-    padding: .5rem;
+    padding: 1rem;
     // justify-content: center;
     box-sizing: border-box;
     
 
     h1 {
-
+        margin: .5rem .5rem .5rem 0;
     }
 
     input {
         border-radius: 22px;
         margin-bottom: 1rem;
-        padding: .5rem;
+        padding: .25rem;
+        border-color: variables.$secondary-border-color;
+
     }
 
     button {
         border-radius: 22px;
         margin-bottom: 1rem;
-        padding: .5rem;
+        padding: .4rem;
         background-color: variables.$primary-interactive-color;
         color: variables.$light-color;
+        border: none;
     }
 
     .warehouse__list--mobile {
-        background-color: white;
+        background-color: variables.$light-color;
 
 
         .warehouse__list--item {
             display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            border-top: 1px solid #5C667E;
-            padding: 0 .5rem 0 .5rem;
+            flex-direction: column;
+            border-top: 1px solid variables.$secondary-border-color;
+            padding: .5rem .5rem 0 .5rem;
             text-align: left;
             
             table {
@@ -49,7 +51,7 @@
                     th {
                         font-size: 11px;
                         line-height: 16px;
-                        color: #5C667E;
+                        color: variables.$secondary-text-color;
                         width: 50%;
                         margin: .5rem 0 .25rem 0;
                     }
@@ -57,38 +59,41 @@
 
                 tbody {
 
-        
-                    p {
-                        font-size: 11px;
-                        width: 50%;
-                        margin: 0 0 .25rem 0;
-        
-                    }
-        
-                    a {
-                        font-size: 11px;
-                        line-height: 16px;
-                        width: 50%;
-                        margin: 0 0 .25rem 0;
-        
-                    }
-        
-                    .address {
-                        width: 40%;
-                        margin-right: 1.5rem;
-                    }
-        
-                    .button__wrap {
-                        margin-bottom: 1rem;
-        
-        
-                        img {
+                    td {
+                        vertical-align: top;
+
+                        p {
+                            font-size: 11px;
+                            margin: 0 0 .25rem 0;
+            
+                        }
+            
+                        a {
                             font-size: 11px;
                             line-height: 16px;
-                            height: 1rem;
-                            width: 1rem;
+                            margin: 0 0 .25rem 0;
+                            justify-self: center;
+            
                         }
-                 }
+            
+                        .address {
+                            margin-right: 1.5rem;
+                        }
+            
+                        .button__wrap {
+                            margin-bottom: 1rem;
+            
+            
+                            img {
+                                font-size: 11px;
+                                line-height: 16px;
+                                height: 1rem;
+                                width: 1rem;
+                            }
+                     }
+    
+
+                    }
 
 
         }
